# Multi-agent-researcher

./: .gitignore  Dockerfile  README.md  active-upstream.conf  docker-compose.blue.yml  docker-compose.green.yml  docker-compose.infra.yml  docker-compose.yml  nginx.conf  pyproject.toml  run_pipeline_test.py  test_citation_graph.py  test_store.py
.github/workflows/: deploy.yml
app/: config.py  main.py  observability.py
app/agents/: __init__.py  base.py  browser_agent.py  citation_formatter_agent.py  critic_agent.py  fact_checker_agent.py  orchestrator_agent.py  planner_agent.py  searcher_agent.py  synthesizer_agent.py
app/api/: routes.py  schemas.py
app/citation_graph/: __init__.py  graph.py  neo4j_adapter.py
app/graph/: __init__.py  research_graph.py  state.py
app/scoring/: __init__.py  trust_score.py
app/state/: __init__.py  models.py  store.py
app/tools/: __init__.py  arxiv_tool.py  base.py  browser_tool.py  ddg_tool.py  exa_tool.py  github_tool.py  pgvector_tool.py  query_normalizer.py  serper_tool.py  tavily_tool.py
backend/: config.py  main.py  observability.py  user_keys.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: deploy.sh  run_pipeline_test.py  trace_events.py  trace_fresh.py
tests/: conftest.py  test_agents.py  test_base_agent.py  test_citation_graph.py  test_fact_checker_node.py  test_graph.py  test_graph_topology.py  test_neo4j_adapter.py  test_searcher_agent.py  test_sse.py  test_state_store.py  test_timing.py  test_tools.py  test_trust_score.py
(+107 files in other folders)
