[project]
name = "deep-research-swarm"
version = "0.1.0"
description = "Multi-agent deep research system using orchestrator-worker pattern"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "playwright>=1.47.0",
    "arxiv>=2.1.0",
    "tavily-python>=0.5.0",
    "google-search-results>=2.4.0",
    "duckduckgo_search>=6.0.0",
    "exa-py>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "firebase-admin>=6.5.0",
    "python-dotenv>=1.0.0",
    "uuid6>=2024.7.10",
    "tokenizers>=0.20.0",
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
    "langfuse>=2.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-asyncpg>=0.46b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
